--- a/public/styles/components/components.css
+++ b/public/styles/components/components.css
@@ -1340,13 +1340,18 @@
            object-fit: cover;
            object-position: center center;
          }
-         video {
+         video, .plyr.plyr--video {
           transition: var(--transition-fast);
           width: 100%;
           height: 100%;
           object-fit: cover;
           object-position: center center;
           display: block;
+        }
+        .plyr.plyr--video {
+          .plyr__controls {
+            padding-bottom: 68px;
+          }
         }
        }
  
