--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -809,6 +809,9 @@ body {
 }
 
 /* Custome class Start  */
+.pointer {
+  cursor: pointer;
+}
 .h-full {
   height: 100%;
 }
@@ -2054,7 +2057,8 @@ body {
       }
       .upload-wrapper {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+        flex-wrap: wrap;
         gap: 10px;
         margin: 0px;
         position: relative;
@@ -2071,14 +2075,15 @@ body {
         .img_wrap {
           background-color: #f4f4f4;
           border-radius: 15px;
-          width: 60px;
-          height: 60px;
-          min-width: 60px;
+          width: 80px;
+          height: 80px;
+          min-width: 80px;
           display: grid;
           place-items: center;
           position: relative;
           left: 0px;
           margin-right: 0px;
+          transition: var(--transition-fast);
           .icons {
             width: 45px;
             height: 45px;
@@ -2092,6 +2097,35 @@ body {
             background-color: #fdfdfd;
             box-shadow: 0px 6px 4px -4px #08080803,
               0px 2px 1.5px -4px #0808080a, 0px 4px 4px 0px #00000017;
+          }
+          .upldimg {
+            border-radius: 15px;
+            min-width: 80px;
+            aspect-ratio: 1;
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+          }
+          .btn-danger {
+            visibility: hidden;
+            opacity: 0;
+            border-radius: 8px;
+            padding: 3px;
+            position: absolute;
+            top: 3px;
+            right: 3px;
+            box-shadow: 0 6px 4px -4px #08080803, 0 2px 1.5px -4px #0808080a, 0 4px 4px #00000017;
+            transition: var(--transition-fast);
+            svg {
+              width: 16px;
+              height: 16px;
+            }
+          }
+          &:hover {
+            .btn-danger {
+              visibility: visible;
+              opacity: 1;
+            }
           }
         }
         .btn-primary {
@@ -2663,8 +2697,16 @@ body {
             padding: 3px;
             border-radius: 8px;
             background-color: #fdfdfd;
-            box-shadow: 0px 6px 4px -4px #08080803,
-              0px 2px 1.5px -4px #0808080a, 0px 4px 4px 0px #00000017;
+            box-shadow: 0px 6px 4px -4px #08080803, 0px 2px 1.5px -4px #0808080a, 0px 4px 4px 0px #00000017;
+          }
+          .btn-danger {
+            position: absolute;
+            bottom: 0px;
+            right: 0px;
+            padding: 3px;
+            border-radius: 8px;
+            background-color: #fdfdfd;
+            box-shadow: 0px 6px 4px -4px #08080803, 0px 2px 1.5px -4px #0808080a, 0px 4px 4px 0px #00000017;
           }
         }
         .btn-primary {
@@ -4879,6 +4921,10 @@ body {
 }
 
 .like-deslike-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 15px;
   ul {
     display: flex;
     align-items: center;
